Updated colors for Chips, favicon, bold typeface and public info.

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Monica Zarate is a Vancouver BC-based Web Developer and UX Designer."
+      content="Monica Zarate is a Vancouver BC-based UX Designer and Web Developer."
     />
     <meta property="og:image" content="%PUBLIC_URL%/monica-zarate.jpg" />
-    <title>Monica Zarate - Web Developer & UX Designer</title>
+    <title>Monica Zarate - UX Designer & Web Developer</title>
   </head>
   <body>
     <div id="root"></div>
